添加直播功能

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: Espero
  * @Date: 2021-04-13 22:54:31
- * @LastEditTime: 2021-04-13 23:16:25
- * @FilePath: /my_first_git_project/index.html
+ * @LastEditTime: 2021-04-15 00:06:30
+ * @FilePath: /dbhot/index.html
  * @Description: file content
 -->
 <!DOCTYPE html>
@@ -19,6 +19,7 @@
 			<li>美妆</li>
 			<li>鬼畜</li>
 			<li>美食</li>
+			<li>直播</li>
 		</ul>
 	</body>
 </html>
