--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: Espero
  * @Date: 2021-04-13 22:54:31
- * @LastEditTime: 2021-04-15 00:11:10
- * @FilePath: /dbhot/index.html
+ * @LastEditTime: 2021-05-05 23:16:28
+ * @FilePath: /undefined/Users/wangxiao/Documents/Development/Git/dbhot/index.html
  * @Description: file content
 -->
 <!DOCTYPE html>
@@ -20,7 +20,7 @@
 			<li>鬼畜</li>
 			<li>美食</li>
 			<li>直播</li>
-			<li>约饭</li>
+			<li>约饭【修复若干bug】</li>
 		</ul>
 	</body>
 </html>
