线上商城功能开发完成

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: Espero
  * @Date: 2021-04-13 22:54:31
- * @LastEditTime: 2021-05-05 22:51:02
+ * @LastEditTime: 2021-05-05 23:54:09
  * @FilePath: /undefined/Users/wangxiao/Documents/Development/Git/dbhot/index.html
  * @Description: file content
 -->
@@ -21,7 +21,7 @@
 			<li>美食</li>
 			<li>直播</li>
 			<li>约饭</li>
-			<li>商城开发了50%——————此时是分支版本</li>
+			<li>商城开发了100%</li>
 		</ul>
 	</body>
 </html>
