--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: Espero
  * @Date: 2021-04-13 22:54:31
- * @LastEditTime: 2021-05-06 00:14:51
- * @FilePath: /undefined/Users/wangxiao/Documents/Development/Git/dbhot/index.html
+ * @LastEditTime: 2021-05-06 22:40:32
+ * @FilePath: /dbhot/index.html
  * @Description: file content
 -->
 <!DOCTYPE html>
@@ -11,6 +11,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" type="text/css" href="index.css" />
 		<title>Live Channel</title>
 	</head>
 	<body>
