--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: Espero
  * @Date: 2021-04-13 22:54:31
- * @LastEditTime: 2021-05-06 22:40:32
+ * @LastEditTime: 2021-05-07 21:34:36
  * @FilePath: /dbhot/index.html
  * @Description: file content
 -->
@@ -24,6 +24,7 @@
 			<li>约饭【修复若干bug】</li>
 			<li>商城开发了100%</li>
 		</ul>
+		<div>在当前电脑下开发了个新功能50%,然后出门了</div>
 	</body>
 </html>
 <script type="text/javascript" src="index.js"></script>
