--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: Espero
  * @Date: 2021-04-13 22:54:31
- * @LastEditTime: 2021-05-06 22:40:32
+ * @LastEditTime: 2021-05-07 21:46:53
  * @FilePath: /dbhot/index.html
  * @Description: file content
 -->
@@ -23,6 +23,7 @@
 			<li>直播</li>
 			<li>约饭【修复若干bug】</li>
 			<li>商城开发了100%</li>
+			<div>在外地开发的新功能模块二</div>
 		</ul>
 	</body>
 </html>
