完成所有功能

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: Espero
  * @Date: 2021-04-13 22:54:31
- * @LastEditTime: 2021-05-07 21:53:42
+ * @LastEditTime: 2021-05-07 21:55:30
  * @FilePath: /dbhot/index.html
  * @Description: file content
 -->
@@ -24,7 +24,7 @@
 			<li>约饭【修复若干bug】</li>
 			<li>商城开发了100%</li>
 		</ul>
-		<div>在当前电脑下开发了个新功能50%,然后出门了</div>
+		<div>在当前电脑下开发了新功能模块一</div>
 		<div>在外地开发的新功能模块二</div>
 	</body>
 </html>
